--- a/widgets_app/pubspec.yaml
+++ b/widgets_app/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.1.0-149.0.dev <4.0.0'
 
 dependencies:
+  animate_do: ^3.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
   go_router: ^8.0.3
 
 dev_dependencies:
