--- a/miscelaneos/pubspec.yaml
+++ b/miscelaneos/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_riverpod: ^2.4.5
   go_router: ^12.0.1
   google_fonts: ^6.1.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
