--- a/miscelaneos/pubspec.yaml
+++ b/miscelaneos/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   go_router: ^12.0.1
   google_fonts: ^6.1.0
   permission_handler: ^11.0.1
+  sensors_plus: ^3.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
